erDiagram
    users {
        VARCHAR(36) id PK
        VARCHAR(255) email UK
        VARCHAR(255) password
        VARCHAR(255) nama
        ENUM role
        BOOLEAN isActive
        TIMESTAMP createdAt
        TIMESTAMP updatedAt
    }

    surat_masuk {
        VARCHAR(36) id PK
        VARCHAR(100) nomorSurat
        TIMESTAMP tanggalSurat
        TIMESTAMP tanggalDiterima
        VARCHAR(255) pengirim
        TEXT perihal
        ENUM jenisSurat
        ENUM status
        VARCHAR(255) tujuan
        TEXT fileUrl
        TEXT filePublicId
        TEXT keterangan
        BOOLEAN isLengkap
        TIMESTAMP createdAt
        TIMESTAMP updatedAt
        VARCHAR(36) createdById FK
    }

    surat_keluar {
        VARCHAR(36) id PK
        VARCHAR(100) nomorSurat
        VARCHAR(100) nomorSuratAdmin
        TIMESTAMP tanggalSurat
        VARCHAR(255) tujuan
        TEXT perihal
        VARCHAR(50) kodeArea
        ENUM status
        TEXT isiSurat
        TEXT fileUrl
        TEXT filePublicId
        TEXT finalFileUrl
        TEXT finalFilePublicId
        BOOLEAN isSigned
        TIMESTAMP signedAt
        TIMESTAMP createdAt
        TIMESTAMP updatedAt
        VARCHAR(36) createdById FK
        VARCHAR(36) jenisSuratId FK
        VARCHAR(36) suratMasukId FK
    }

    disposisi {
        VARCHAR(36) id PK
        TEXT instruksi
        TEXT catatan
        ENUM status
        TIMESTAMP tanggalDisposisi
        TIMESTAMP tanggalSelesai
        BOOLEAN isRequestLampiran
        TIMESTAMP createdAt
        TIMESTAMP updatedAt
        VARCHAR(36) fromUserId FK
        VARCHAR(36) toUserId FK
        VARCHAR(36) suratMasukId FK
        VARCHAR(36) suratKeluarId FK
    }

    lampiran {
        VARCHAR(36) id PK
        TEXT fileUrl
        TEXT filePublicId
        VARCHAR(255) fileName
        VARCHAR(50) fileType
        TIMESTAMP uploadedAt
        VARCHAR(36) uploadedById FK
        VARCHAR(36) suratMasukId FK
        VARCHAR(36) suratKeluarId FK
    }

    tracking_surat {
        VARCHAR(36) id PK
        TIMESTAMP timestamp
        VARCHAR(100) aksi
        TEXT keterangan
        VARCHAR(36) userId FK
        VARCHAR(36) suratMasukId FK
        VARCHAR(36) suratKeluarId FK
    }

    jenis_surat {
        VARCHAR(36) id PK
        VARCHAR(10) kode UK
        VARCHAR(100) nama
        VARCHAR(100) format
        TIMESTAMP createdAt
        TIMESTAMP updatedAt
    }

    kode_bagian {
        VARCHAR(36) id PK
        VARCHAR(50) role UK
        VARCHAR(10) kodeInternal
        VARCHAR(10) kodeEksternal
        VARCHAR(100) namaBagian
    }

    kode_area {
        VARCHAR(36) id PK
        VARCHAR(10) kode UK
        VARCHAR(100) nama
    }

    nomor_surat_counter {
        VARCHAR(36) id PK
        INT tahun
        VARCHAR(10) kodeBagian
        INT counter
    }

    users ||--o{ surat_masuk : "createdById"
    users ||--o{ surat_keluar : "createdById"
    users ||--o{ disposisi : "fromUserId"
    users ||--o{ disposisi : "toUserId"
    users ||--o{ lampiran : "uploadedById"
    users ||--o{ tracking_surat : "userId"

    surat_masuk ||--o{ disposisi : "suratMasukId"
    surat_masuk ||--o{ lampiran : "suratMasukId"
    surat_masuk ||--o{ tracking_surat : "suratMasukId"
    surat_masuk ||--o| surat_keluar : "suratMasukId"

    surat_keluar ||--o{ disposisi : "suratKeluarId"
    surat_keluar ||--o{ lampiran : "suratKeluarId"
    surat_keluar ||--o{ tracking_surat : "suratKeluarId"
    surat_keluar }o--|| jenis_surat : "jenisSuratId"
